--- a/BlogBook - teste/sigle de review/index.html
+++ b/BlogBook - teste/sigle de review/index.html
@@ -4,19 +4,132 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/rightNav.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <!-- Boxiocns CND Link -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Blog</title>
+    <title>Sigle de Review</title>
 </head>
 <body>
     <section class="container_banner">
-        <img src="./imgs/banner_book1.svg" alt="">
+        <img src="./imgs/banner_book1.svg" alt="" id="banner"/>
     </section>
     <main>
-        <img src="./imgs/book1.svg" alt="">
-        <div class="information">
-            
+        <section>
+            <img src="./imgs/book1.svg" alt="">
+        </section>
+        <div id="content-info">
+            <hr>
+            <div id="title_h1">
+                <h1>Boa noite Punpun</h1>
+                <h5>Leu em Set 16, 2023</h5>
+            </div>
+            <div class="information">
+                Achei a obra bem construída, com um roteiro dinâmico 
+                que desenvolve todos os personagens bem para um primeiro 
+                volume, o traço é realista e o cenário foi bem apresentado 
+                para o leitor. Não tenho pontos negativos para abordar, super
+                recomendo. 
+            </div>
+            <div id="share">compartilhar</div>
         </div>
+
+        <nav class="right-nav">
+            <div class="initial">
+                <span class="name_top2">Análises Relevantes</span>
+                <p class="mais2">Mais</p>
+            </div>
+            <hr class="rowBooks">
+            <div class="box_books">
+                <img src="./imgs/book1.svg" alt="">
+                <div class="info_book">
+                    <h4>Boa noite Punpun</h4>
+                    <div class="elements_book">
+                        <div class="important">
+                            <img src="./imgs/user.svg" alt="">
+                            <span>Frank Sea</span>
+                        </div>
+                        <p>The most overrated manga i ever read</p>
+                    </div>
+                </div>
+            </div>
+            <hr class="row_right">
+            <div class="box_books">
+                <img src="./imgs/book2.svg" alt="">
+                <div class="info_book">
+                    <h4>Boa noite Punpun</h4>
+                    <div class="elements_book">
+                        <div class="important">
+                            <img src="./imgs/user.svg" alt="">
+                            <span>Frank Sea</span>
+                        </div>
+                        <p>The most overrated manga i ever read</p>
+                    </div>
+                </div>
+            </div>
+            <hr class="row_right">
+            <div class="box_books">
+                <img src="./imgs/book3.svg" alt="">
+                <div class="info_book">
+                    <h4>Boa noite Punpun</h4>
+                    <div class="elements_book">
+                        <div class="important">
+                            <img src="./imgs/user.svg" alt="">
+                            <span>Frank Sea</span>
+                        </div>
+                        <p>The most overrated manga i ever read</p>
+                    </div>
+                </div>
+            </div>
+            <hr class="row_right">
+            <div class="box_books">
+                <img src="./imgs/book1.svg" alt="">
+                <div class="info_book">
+                    <h4>Boa noite Punpun</h4>
+                    <div class="elements_book">
+                        <div class="important">
+                            <img src="./imgs/user.svg" alt="">
+                            <span>Frank Sea</span>
+                        </div>
+                        <p>The most overrated manga i ever read</p>
+                    </div>
+                </div>
+            </div>
+            <hr class="row_right">
+            <div class="box_books">
+                <img src="./imgs/book1.svg" alt="">
+                <div class="info_book">
+                    <h4>Boa noite Punpun</h4>
+                    <div class="elements_book">
+                        <div class="important">
+                            <img src="./imgs/user.svg" alt="">
+                            <span>Frank Sea</span>
+                        </div>
+                        <p>The most overrated manga i ever read</p>
+                    </div>
+                </div>
+            </div>
+        </nav>
+
+        <footer>
+            <div class="container_footer">
+                <div class="row_footer">
+                    <ul class="footer_ul">
+                        <li><a href="#" class="color">Sobre a oxybook</a></li>
+                        <li><a href="#" class="color">Política de Privacidade</a></li>
+                        <li><img src="./imgs/logo_footer.svg" alt=""></li>
+                        <li><a href="#" class="color">Termos de Uso</a></li>
+                        <div class="social_medias">
+                            <li><i class='bx bxl-instagram color'></i></li>
+                            <li><i class='bx bxl-linkedin-square color'></i></li>
+                            <li><i class='bx bxl-facebook-circle color'></i></li>
+                        </div>
+                        <a href=""><img src="./imgs/arrow.svg" alt="" id="arrow_footer"></a>
+                    </ul>
+                </div>
+            </div>
+            <span class="span_footer">© 2024 Oxybok. Todos os direitos reservados</span>
+        </footer>
     </main>
 </body>
 </html>
