--- a/BlogBook - teste/sigle de review/index.html
+++ b/BlogBook - teste/sigle de review/index.html
@@ -16,7 +16,7 @@
     </section>
     <main>
         <section>
-            <img src="./imgs/book1.svg" alt="">
+            <img src="./imgs/book1.svg" alt="" class="Icon">
         </section>
         <div id="content-info">
             <hr>
