--- a/BlogBook - teste/sigle de review/index.html
+++ b/BlogBook - teste/sigle de review/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="../css/rightNav.css">
     <link rel="stylesheet" href="../css/footer.css">
     <!-- Boxiocns CND Link -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -33,8 +33,9 @@
             </div>
             <div id="share">compartilhar</div>
         </div>
+        
 
-        <nav class="right-nav">
+        <!-- <nav class="right-nav">
             <div class="initial">
                 <span class="name_top2">Análises Relevantes</span>
                 <p class="mais2">Mais</p>
@@ -109,27 +110,27 @@
                     </div>
                 </div>
             </div>
-        </nav>
+        </nav> -->
 
-        <footer>
-            <div class="container_footer">
-                <div class="row_footer">
-                    <ul class="footer_ul">
-                        <li><a href="#" class="color">Sobre a oxybook</a></li>
-                        <li><a href="#" class="color">Política de Privacidade</a></li>
-                        <li><img src="./imgs/logo_footer.svg" alt=""></li>
-                        <li><a href="#" class="color">Termos de Uso</a></li>
-                        <div class="social_medias">
-                            <li><i class='bx bxl-instagram color'></i></li>
-                            <li><i class='bx bxl-linkedin-square color'></i></li>
-                            <li><i class='bx bxl-facebook-circle color'></i></li>
-                        </div>
-                        <a href=""><img src="./imgs/arrow.svg" alt="" id="arrow_footer"></a>
-                    </ul>
-                </div>
-            </div>
-            <span class="span_footer">© 2024 Oxybok. Todos os direitos reservados</span>
-        </footer>
     </main>
+    <!-- <footer>
+        <div class="container_footer">
+            <div class="row_footer">
+                <ul class="footer_ul">
+                    <li><a href="#" class="color">Sobre a oxybook</a></li>
+                    <li><a href="#" class="color">Política de Privacidade</a></li>
+                    <li><img src="./imgs/logo_footer.svg" alt=""></li>
+                    <li><a href="#" class="color">Termos de Uso</a></li>
+                    <div class="social_medias">
+                        <li><i class='bx bxl-instagram color'></i></li>
+                        <li><i class='bx bxl-linkedin-square color'></i></li>
+                        <li><i class='bx bxl-facebook-circle color'></i></li>
+                    </div>
+                    <a href=""><img src="./imgs/arrow.svg" alt="" id="arrow_footer"></a>
+                </ul>
+            </div>
+        </div>
+        <span class="span_footer">© 2024 Oxybok. Todos os direitos reservados</span>
+    </footer> -->
 </body>
 </html>
