--- a/BlogBook - teste/sigle de review/index.html
+++ b/BlogBook - teste/sigle de review/index.html
@@ -19,6 +19,10 @@
             <img src="./imgs/book1.svg" alt="" class="Icon">
         </section>
         <div id="content-info">
+            <div class="infoIcon">
+                <img src="./imgs/iconFrank.svg" alt="">
+                <p>Análise de <span>Frank sea</span></p>
+            </div>
             <hr>
             <div id="title_h1">
                 <h1>Boa noite Punpun</h1>
