--- a/BlogBook - teste/analises page/index.html
+++ b/BlogBook - teste/analises page/index.html
@@ -80,6 +80,16 @@
                     </div>
                     <div class="bookDados">
                         <img src="./imgs/books/book1.svg" alt="">
+                        <div class="infoBook">
+                            <h3>Boa noite Punpun</h3>
+                            <p>Achei a obra bem construída,
+                               com um roteiro dinâmico que desenvolve
+                               todos os personagen bem para um primeiro 
+                               volume, o traço é realista e o cenário foi 
+                               bem apresentado para o leitor. Não tenho 
+                               pontos negativos para abordar, super recomendo.
+                            </p>
+                        </div>
                     </div>
                 </div>
                 
