--- a/BlogBook - teste/analises page/index.html
+++ b/BlogBook - teste/analises page/index.html
@@ -75,7 +75,8 @@
                         <span id="userName_single">Francisco oceano 54</span>
                         <span id="idName_single"><span class="wordId">ID:</span> #3mr2u33248uyn4283</span>
                         <span class="ponto"></span>
-                        <span id="dia_single">3 dias atrás</span>
+                        <span id="dia_single">14 agosto</span>
+                        <span class="trêsPontinhos">...</span>
                         </div>
                     </div>
                     <div class="bookDados">
