--- a/BlogBook - teste/analises page/index.html
+++ b/BlogBook - teste/analises page/index.html
@@ -93,6 +93,112 @@
                         </div>
                     </div>
                 </div>
+                <hr>
+                <div class="containerAnalises">
+                    <div id="info_sigle">
+                        <div class="imgUser_sigle">
+                            <img src="./imgs/dogUser.svg" alt="" id="user_sigle">
+                        </div>
+                        <div class="dados">
+                        <span id="userName_single">Francisco oceano 54</span>
+                        <span id="idName_single"><span class="wordId">ID:</span> #3mr2u33248uyn4283</span>
+                        <span class="ponto"></span>
+                        <span id="dia_single">14 agosto</span>
+                        <span class="trêsPontinhos">...</span>
+                        </div>
+                    </div>
+                    <div class="bookDados">
+                        <img src="./imgs/books/book2.svg" alt="">
+                        <div class="infoBook">
+                            <h3>O Demônio de Frankfurt</h3>
+                            <p>O autor usa eventos ocorridos na viagem
+                                à Alemanha misturados as suas lembranças
+                                e experiências de alguém que nasceu e cresceu
+                                em meio à violência na periferia pra criar uma
+                                história que é uma espécie de autoficção...
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="containerAnalises">
+                    <div id="info_sigle">
+                        <div class="imgUser_sigle">
+                            <img src="./imgs/dogUser.svg" alt="" id="user_sigle">
+                        </div>
+                        <div class="dados">
+                        <span id="userName_single">Francisco oceano 54</span>
+                        <span id="idName_single"><span class="wordId">ID:</span> #3mr2u33248uyn4283</span>
+                        <span class="ponto"></span>
+                        <span id="dia_single">14 agosto</span>
+                        <span class="trêsPontinhos">...</span>
+                        </div>
+                    </div>
+                    <div class="bookDados">
+                        <img src="./imgs/books/book3.svg" alt="">
+                        <div class="infoBook">
+                            <h3>Gótico nordestino</h3>
+                            <p>é um livro divertido e bem-escrito.
+                                O autor soube criar personagens e boas tramas,
+                                fugindo dos arquétipos, tanto do gótico quanto
+                                do nordestino. É perceptível a influência da
+                                cultura pop na prosa de Cristhiano Aguiar....
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="containerAnalises">
+                    <div id="info_sigle">
+                        <div class="imgUser_sigle">
+                            <img src="./imgs/dogUser.svg" alt="" id="user_sigle">
+                        </div>
+                        <div class="dados">
+                        <span id="userName_single">Francisco oceano 54</span>
+                        <span id="idName_single"><span class="wordId">ID:</span> #3mr2u33248uyn4283</span>
+                        <span class="ponto"></span>
+                        <span id="dia_single">14 agosto</span>
+                        <span class="trêsPontinhos">...</span>
+                        </div>
+                    </div>
+                    <div class="bookDados">
+                        <img src="./imgs/books/book4.svg" alt="">
+                        <div class="infoBook">
+                            <h3>IT : A coisa </h3>
+                            <p>It é um romance de terror de 1986 do autor estadunidense
+                                 Stephen King. Foi seu 22º livro e seu 17º romance escrito em seu próprio nome.
+                                 A história segue as experiências de sete crianças, que 
+                                 são aterrorizadas por uma entidade malig...
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="containerAnalises">
+                    <div id="info_sigle">
+                        <div class="imgUser_sigle">
+                            <img src="./imgs/dogUser.svg" alt="" id="user_sigle">
+                        </div>
+                        <div class="dados">
+                        <span id="userName_single">Francisco oceano 54</span>
+                        <span id="idName_single"><span class="wordId">ID:</span> #3mr2u33248uyn4283</span>
+                        <span class="ponto"></span>
+                        <span id="dia_single">14 agosto</span>
+                        <span class="trêsPontinhos">...</span>
+                        </div>
+                    </div>
+                    <div class="bookDados">
+                        <img src="./imgs/books/book5.svg" alt="">
+                        <div class="infoBook">
+                            <h3>Precisamos falar sobre o kevin </h3>
+                            <p>Precisamos falar sobre o Kevin é um romance 
+                                de ficção publicado em 2003, escrito por Lionel 
+                                Shriver, que trata sobre um massacre escolar fictício,
+                                segundo a perspectiva da mãe do assassino, Eva Khatchadourian, que ...
+                            </p>
+                        </div>
+                    </div>
+                </div>
                 
                 <hr>
             </div>
