--- a/BlogBook - teste/analises page/index.html
+++ b/BlogBook - teste/analises page/index.html
@@ -76,7 +76,7 @@
                         <span id="idName_single"><span class="wordId">ID:</span> #3mr2u33248uyn4283</span>
                         <span class="ponto"></span>
                         <span id="dia_single">14 agosto</span>
-                        <span class="trêsPontinhos">...</span>
+                        <button class="trêsPontinhos">...</button>
                         </div>
                     </div>
                     <div class="bookDados">
@@ -104,7 +104,7 @@
                         <span id="idName_single"><span class="wordId">ID:</span> #3mr2u33248uyn4283</span>
                         <span class="ponto"></span>
                         <span id="dia_single">14 agosto</span>
-                        <span class="trêsPontinhos">...</span>
+                        <button class="trêsPontinhos">...</button>
                         </div>
                     </div>
                     <div class="bookDados">
@@ -131,7 +131,7 @@
                         <span id="idName_single"><span class="wordId">ID:</span> #3mr2u33248uyn4283</span>
                         <span class="ponto"></span>
                         <span id="dia_single">14 agosto</span>
-                        <span class="trêsPontinhos">...</span>
+                        <button class="trêsPontinhos">...</button>
                         </div>
                     </div>
                     <div class="bookDados">
@@ -158,7 +158,7 @@
                         <span id="idName_single"><span class="wordId">ID:</span> #3mr2u33248uyn4283</span>
                         <span class="ponto"></span>
                         <span id="dia_single">14 agosto</span>
-                        <span class="trêsPontinhos">...</span>
+                        <button class="trêsPontinhos">...</button>
                         </div>
                     </div>
                     <div class="bookDados">
@@ -184,7 +184,7 @@
                         <span id="idName_single"><span class="wordId">ID:</span> #3mr2u33248uyn4283</span>
                         <span class="ponto"></span>
                         <span id="dia_single">14 agosto</span>
-                        <span class="trêsPontinhos">...</span>
+                        <button class="trêsPontinhos">...</button>
                         </div>
                     </div>
                     <div class="bookDados">
