--- a/BlogBook - teste/analises page/index.html
+++ b/BlogBook - teste/analises page/index.html
@@ -77,6 +77,10 @@
                         <span class="ponto"></span>
                         <span id="dia_single">14 agosto</span>
                         <button class="trêsPontinhos">...</button>
+                        <div class="notification">
+                            <button type="button" id="btnDelete"><box-icon type='solid' name='trash-alt'>Excluir</box-icon></button>
+                            <button type="button" id="btnFixar">Fixar no seu perfil</button>
+                        </div>
                         </div>
                     </div>
                     <div class="bookDados">
@@ -268,5 +272,6 @@
         </div>
         <span class="span_footer">© 2024 Oxybok. Todos os direitos reservados</span>
     </footer>
+    <script src=""></script>
 </body>
 </html>
